--- a/nas/nas-intuitions.ipynb
+++ b/nas/nas-intuitions.ipynb
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +924,17 @@
       "population_size     : mean=  0.0106, std=  0.0034\n",
       "log_frequency       : mean=  0.0040, std=  0.0029\n",
       "random_seed         : mean=  0.0009, std=  0.0006\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
