trials and postmortem

--- a/nas/nas_postmortem.ipynb
+++ b/nas/nas_postmortem.ipynb
@@ -2674,6 +2674,57 @@
     "\n",
     "See `post-mortem-nas.md` sections j-p for implementation details."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Pure GA Search Results (200 trials, Jan 2026)\n",
+    "\n",
+    "**Best Configuration Found:** Trial #42 - Fitness **798.6**\n",
+    "\n",
+    "### Key Findings\n",
+    "\n",
+    "1. **Pure GA dominates NEAT** (798.6 vs 459.8 best fitness)\n",
+    "   - Simple fixed topology >> complex variable topology for locomotion\n",
+    "   - 8-neuron hidden layer optimal\n",
+    "\n",
+    "2. **Critical Settings:**\n",
+    "   - `neural_hidden_size`: 8 (small, efficient)\n",
+    "   - `selection_method`: rank\n",
+    "   - `use_crossover`: **False** (mutation-only works best!)\n",
+    "   - `use_proprioception`: **True** (all sensors)\n",
+    "   - `proprioception_inputs`: \"all\"\n",
+    "\n",
+    "3. **Mutation Strategy:**\n",
+    "   - Weight mutations: **Conservative** (0.12 rate, 0.44 magnitude)\n",
+    "   - Body mutations: **Aggressive** (0.58 rate, 0.19 magnitude)\n",
+    "   - Focus evolution on morphology, not neural weights\n",
+    "\n",
+    "4. **Selection:**\n",
+    "   - `cull_percentage`: 0.78 (aggressive)\n",
+    "   - Rank-based selection preferred\n",
+    "\n",
+    "5. **Body Constraints:**\n",
+    "   - 3-9 nodes, up to 14 muscles\n",
+    "   - Constrained search space helps\n",
+    "\n",
+    "### Performance Distribution\n",
+    "\n",
+    "- Top 10: 525-799 fitness\n",
+    "- Median: 240\n",
+    "- Mean: 282\n",
+    "- Range: 104-799\n",
+    "\n",
+    "**Key Insight:** For rhythmic locomotion tasks, a simple feedforward network with fixed topology + focused hyperparameter search outperforms NEAT's topology evolution. Use NEAT when network structure is critical to the task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
